--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <footer>
       <div class="footer-hero">
-        <img src="/assets/image-jeremy-small.webp" />
+        <img src="./assets/image-jeremy-small.webp" />
 
         <svg
           width="52"
